[tool.poetry]
name = "declopy"
version = "0.1.0"
description = ""
authors = ["Arun Patro <arun.kumar.patro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.4"
fire = "^0.7.0"

[tool.poetry.scripts]
declopy = "declopy.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
