[project]
name = "declo"
version = "0.1.0"
description = "Declo is a python with javascript like functional syntax."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astor>=0.8.1",
    "fire>=0.7.0",
    "rich>=13.7.0",
]


[project.scripts]
declo = "declo.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
