[project]
name = "declo"
version = "0.1.0"
description = "Declo is a python with javascript like functional syntax."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astor>=0.8.1",
    "fire>=0.7.0",
    "mkdocs-material>=9.6.3",
    "rich>=13.7.0",
    "typer>=0.15.1",
]

[tool.setuptools]
packages = ["declo", "tests"]

[project.scripts]
declo = "declo.cli:main"
declodev = "tests.cli:app"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mkdocs-material>=9.6.3",
    "pytest>=8.3.4",
]
